--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react": "^15.5.4",
     "react-apollo": "^1.0.1",
     "react-dom": "^15.5.4",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "scrape-it": "^3.3.2"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
@@ -46,7 +47,7 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^6.10.3",
     "eslint-plugin-standard": "^3.0.1",
-    "flow-bin": "^0.44.0",
+    "flow-bin": "^0.44.1",
     "flow-typed": "^2.0.0",
     "jest": "^19.0.2",
     "prettier": "^1.1.0",
