--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "flow-typed": "flow-typed"
   },
   "dependencies": {
-    "graphql": "^0.9.3",
+    "graphql": "^0.9.4",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
-    "next": "^2.2.0",
+    "next": "^2.3.0-alpha1",
     "ramda": "^0.23.0",
     "react": "^15.5.4",
-    "react-apollo": "^1.1.1",
+    "react-apollo": "^1.1.2",
     "react-dom": "^15.5.4"
   },
   "devDependencies": {
@@ -40,7 +40,7 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^6.10.3",
     "eslint-plugin-standard": "^3.0.1",
-    "flow-bin": "^0.44.2",
+    "flow-bin": "^0.45.0",
     "flow-typed": "^2.1.2",
     "jest": "^19.0.2",
     "prettier": "^1.2.2",
