--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "graphql": "^0.9.6",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
-    "next": "^2.3.0-alpha1",
+    "next": "^2.3.1",
     "ramda": "^0.23.0",
     "react": "^15.5.4",
-    "react-apollo": "^1.1.3",
+    "react-apollo": "^1.2.0",
     "react-dom": "^15.5.4"
   },
   "devDependencies": {
@@ -34,7 +34,7 @@
     "eslint-config-standard-react": "^5.0.0",
     "eslint-plugin-flowtype": "^2.32.1",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-jsx-a11y": "^5.0.0",
     "eslint-plugin-node": "^4.2.2",
     "eslint-plugin-prettier": "^2.0.1",
     "eslint-plugin-promise": "^3.5.0",
@@ -44,7 +44,7 @@
     "flow-typed": "^2.1.2",
     "jest": "^19.0.2",
     "prettier": "^1.3.1",
-    "prettier-standard": "^4.1.0",
+    "prettier-standard": "^5.0.0",
     "react-addons-test-utils": "^15.5.1"
   }
 }
