--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "flow-typed": "flow-typed"
   },
   "dependencies": {
+    "express": "^4.15.2",
     "graphql": "^0.9.6",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
+    "lru-cache": "^4.0.2",
     "next": "^2.3.1",
     "ramda": "^0.23.0",
     "react": "^15.5.4",
