--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "next",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js",
+    "lint": "eslint ./",
     "test": "jest",
     "flow": "flow",
     "flow-typed": "flow-typed"
