--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "dev": "node server.js",
     "build": "next build",
     "start": "NODE_ENV=production node server.js",
+    "autotrack": "autotrack -o static/autotrack.custom.js -p urlChangeTracker",
     "lint": "eslint ./",
     "test": "jest",
     "flow": "flow",
     "flow-typed": "flow-typed"
   },
   "dependencies": {
+    "autotrack": "^2.3.2",
     "express": "^4.15.2",
     "graphql": "^0.9.6",
     "isomorphic-fetch": "^2.2.1",
